--- a/faq.html
+++ b/faq.html
@@ -124,5 +124,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="js/all.js"></script>
+    <script>
+        /* =======手風琴切換======== */
+        $('div.ansmod').on("click", "input", function(e){
+            let span= $(this).prev().find('span > span')
+            let label= $(this).prev()
+            if( $(this).prop("checked")){
+                $(this).siblings('input[type="checkbox"]').prop("checked", false)
+                label.find("label").css("color", "#B69452")
+                label.siblings().find("label").css("color", "#cacaca")
+                span.css("transform", "rotate(90deg)")
+                span.parents('div.ansbox').siblings().find('span > span').css("transform", "rotate(0deg)")
+            }else{
+                span.css("transform", "rotate(0deg)")
+                label.find("label").css("color", "#cacaca")
+            }
+        })
+    </script>
 </body>
 </html>
