--- a/about.html
+++ b/about.html
@@ -18,61 +18,61 @@
 </head>
 <body>
   <!-- 頂端nav -->
-  <nav class="head nav">
-    <a href="index.html">
-        <img src="img/logo_ca_l.svg" alt="">
-    </a>
-    <div class="nav_main">
-        <ul>
-            <li><a style="color:#B69452 " href="about.html">鴞之匠心</a></li>
-            <li><a href="store.html">精品商店</a></li>
-            <li><a class="loginnav" href="#">登入/註冊</a></li>
-            <li><a href="usercenter.html">會員中心</a></li>
-            <li><a href="faq.html">常見問題</a></li>
-        </ul>
-    </div>
-    <a class= "buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i><span class="buyingdot"></span></a>
-    <button type="button" class="hamburger hamburger-act">
-        <span class="hamburger-box">
-            <span class="hamburger-inner"></span>
-        </span>
-    </button>
-</nav>
+    <nav class="head nav">
+        <a href="index.html">
+            <img src="img/logo_ca_l.svg" alt="">
+        </a>
+        <div class="nav_main">
+            <ul>
+                <li><a style="color:#B69452 " href="about.html">鴞之匠心</a></li>
+                <li><a href="store.html">精品商店</a></li>
+                <li><a class="loginnav" href="#">登入/註冊</a></li>
+                <li><a href="usercenter.html">會員中心</a></li>
+                <li><a href="faq.html">常見問題</a></li>
+            </ul>
+        </div>
+        <a class= "buyingcar" href="buyinglist.html"><i class="fas fa-feather-alt"></i><span class="buyingdot"></span></a>
+        <button type="button" class="hamburger hamburger-act">
+            <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+            </span>
+        </button>
+    </nav>
   <!-- login懸浮視窗 -->
     <article class="loginbg"></article>
   <!-- top區塊 -->
     <header class="abouttop">
         <h1>時往歲載陰</h1>
-        <img src="img/logo_14_s.svg" alt="">
         <h1>千餘年屹立</h1>
+        <img src="img/logo_14_s.svg" alt="">
         <p>since 666</p>
     </header>
   <!-- 第一區塊 -->
-    <section class="aboutone">
+    <section class="aboutone one">
         <div>
-          <h2>萬年原生木<br>坐擁千坪林</h2>
+          <h2>萬年原生木</h2><h2>坐擁千坪林</h2>
           <p>本店擁有佔地達1,600坪廣闊樹木林，原始森林推測樹齡最高達萬年。<br>林內涵蓋寒帶、溫帶、熱帶及地中海型氣候樹種，市面上常見與少見的魔杖樹木原料皆可於此找到蹤跡。</p>
         </div>
         <a href="about.html"><span></span><p>了解詳情</p></a>
-        <img src="img/aboutone.jpg" alt="">
+        <img class="one_img" src="img/aboutone.jpg" alt="">
     </section>
   <!-- 第二區塊 -->
-    <section class="abouttwo">
-    <img src="img/abouttwo.png" alt="">
+    <section class="abouttwo two">
+    <img class="two_img" src="img/abouttwo.png" alt="">
     <div>
-        <h2>史詩級匠人 <br>千百年傳承</h2>
+        <h2>史詩級匠人</h2><h2>千百年傳承</h2>
         <p>研究魔杖超越千年，與促繁不及備載的魔杖製造師家族與後代開發與合作，至今本店的獨家御用製造師已超越千名。<br>每年皆會推出上百款系列，也接受諮詢訂製，持續致力精進與創新魔杖產業。    </p>
     </div>
     <a href="about.html"><span></span><p>了解詳情</p></a>
   </section>
 <!-- 第三區塊 -->
-   <section class="aboutone">
+   <section class="aboutone three">
     <div>
-      <h2>優質杖芯<br>來源安心</h2>
+      <h2>優質杖芯</h2><h2>來源安心</h2>
       <p>與知名奇幻生物培育商具長期合作。<br>每一支自本店製作售出的魔杖(私人訂製除外)杖芯都具備透明的產地與血統證明書，確保製造的所有魔法材料都是合法且優質的。</p>
     </div>
     <a href="about.html"><span></span><p>了解詳情</p></a>
-    <img class="aboutthree" src="img/aboutthree.png" alt="">
+    <img class="aboutthree three_img" src="img/aboutthree.png" alt="">
 </section>
   <!-- 進一步選購 -->
   <section class="gotoshop">
@@ -190,32 +190,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="js/all.js"></script>
-  <script>
-      // =========可惡的輪播owl套件=========
-    $('.owl-carousel').owlCarousel({
-        loop:false,
-        margin:40,
-        nav:true,
-        dots:false,
-        responsive:{
-            0:{
-                items:1
-            },
-            576:{
-                items:2
-            },
-            992:{
-                items:3
-            },
-            1600:{
-                items:4
-            },
-            2100:{
-                items:5
-            }
-        }
-    })
-
-  </script>
+  <script src="js/about.js"></script>
 </body>
 </html>
